# orthodontic_patient_portal

./: .gitignore  README.md  env.example  manage.py  pyproject.toml  requirements.txt
dental_management/: asgi.py  settings.py  urls.py  wsgi.py
patients/: admin.py  forms.py  models.py  urls.py  views.py
patients/templates/patients/: appointment_delete_confirm.html  appointment_form.html  appointment_list.html  dashboard.html  patient_delete_confirm.html  patient_detail.html  patient_form.html  payment_delete_confirm.html  payment_form.html  procedure_delete_confirm.html  procedure_form.html  treatment_plan_delete_confirm.html  treatment_plan_form.html  treatment_plan_list.html  visit_delete_confirm.html  visit_form.html  xray_delete_confirm.html  xray_form.html
patients/templatetags/: form_extras.py
templates/: base.html  base_auth.html
templates/registration/: logged_out.html  login.html
