[project]
name = "orthodontic-patient-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==23.11.0",
    "django==5.2.5",
    "django-cors-headers==4.3.1",
    "django-csp==3.7",
    "django-debug-toolbar==4.2.0",
    "django-environ==0.12.0",
    "django-extensions==3.2.3",
    "django-storages==1.14.2",
    "flake8==6.1.0",
    "isort==5.12.0",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.9",
    "pytest==7.4.3",
    "pytest-django==4.7.0",
]
